[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markup_metrics"
version = "0.1.0"
description = "Testing Tool for comparing implementations of Automatic Markup (Auto-Markup) tools."
readme = "README.md"
authors = [
  { name = "Paul Prescod", email = "paul@prescod.net" },
]

