[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markup_metrics"
version = "0.2.1"
description = "Testing Tool for comparing implementations of Automatic Markup (Auto-Markup) tools."
readme = "README.md"
authors = [{ name = "Paul Prescod", email = "paul@prescod.net" }]

dependencies = [
    "pyter3>=0.3",
    "guidance>=0.0.61",
    "lxml>=4.9.2",
    "prettytable>=3.7.0",
]

[tool.hatch.build.targets.wheel.force-include]
"test_metrics" = "test_metrics"
"data" = "data"
"schemas" = "schemas"
